# auto-work-bdc

./: AutoBdc.py  IFLOW.md  README.en.md  README.md  default.aproj  main.aardio  readme.md
.gitee/workflows/: build.yml
.github/workflows/: build.yml
AutoBdc/: default.aproj  main.aardio
AutoCarOCR/: default.aproj  main.aardio
AutoDanBao/: AutoDanBao.py  DanBao.py  OCRImgToExcel.py  OldDanBao.py  default.aproj  main.aardio
bdc-page/: index.html  package-lock.json  package.json
bdc-service/: requirements.txt
config/: bdc.table  database.table
dlg/: getdata.aardio  image.aardio  pledge.aardio  start.aardio
project-bulid/: README.md  pyproject.toml
project-bulid/app/: Config.py  ImageProgram.py  WorkConfig.py  main.py  requirements.txt  tempCodeRunnerFile.py
project-bulid/app/config/: config.ini
project-bulid/app/core/: ImageOCR.py  ImageProgram.py  PushBusinessTask.py
project-bulid/app/routers/: ImgProcess.py  Pushtask.py  Setting.py
project-bulid/app/static/: index.html
project-bulid/app/static/assets/: index-B1dUwxTk.css  index-Bszttpb2.css  index-CZzPqi7r.js  index-Ccdm87Z_.css  index-CcoHQpBS.js  index-CxbSwntr.js  index-DGYMuNTE.css  index-DSbhf7cx.css  index-DYyaiwGF.css  index-DZjEylgi.js  index-DnNrSMsj.js  index-Dv0cDrIa.css  index-KnZuq5kT.js  index-UnjnZ_bm.js  index-hg8_E2wl.js  index-jyvF6DFz.css
py/: AutoBdc.py  SortOCR.py  文档.md
res/: PledgeFileInfo.xlsx
tools/: pip.aardio
交接/: 入库表.xlsx  出库申请表.xlsx  工作流程及注意事项.docx  抵押登记台账.xlsx  权证交接明细.xlsx
文档及测试数据/: 依赖及版本说明.md  抵押登记台账.xlsx  担保范围.xlsx  权证交接明细 - 副本.xlsx
(+45 files in other folders)
