[project]
name = "project-bulid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.10"
dependencies = [
    "drissionpage>=4.1.1.2",
    "fastapi>=0.124.4",
    "nuitka>=2.8.9",
    "pandas>=2.0.3",
    "pywin32>=311",
    "uvicorn>=0.33.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
